Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11479

Error replicating xattr for /tmp/target/d8.lustre-rsync-test/d07/d073/b4: 2

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • Lustre 2.12.0
    • None
    • 3
    • 9223372036854775807

      The lustre-rsync-test test_8() is spewing thousands of messages:

      Registered 1 changelog users: 'cl14'
      lustre-MDT0000: Registered changelog user cl14
      Error replicating  xattr for /tmp/target/d8.lustre-rsync-test/d01/d011/c0: 2
      Error replicating  xattr for /tmp/target/d8.lustre-rsync-test/d01/d011/c0: 2
      Error replicating  xattr for /tmp/target/d8.lustre-rsync-test/d01/d011/c0: 2
      :
      Error replicating  xattr for /tmp/target/d8.lustre-rsync-test/d07/d073/b4: 2
      :
      Source: /mnt/lustre
      Target: /tmp/target
      Statuslog: /tmp/lustre_rsync.log
      Changelog registration: cl14
      Starting changelog record: 0
      Clear changelog after use: no
      Errors: 8100
      lustre_rsync took 324 seconds
      Changelog records consumed: 5121
      

      Each of the identical messsges if printed 5x before the next file is listed. Which makes it seem like it isn't working correctly, even though the test is not marked as failing.

      This looks like it started failing around 2018-07-31, but it is slow to track it back exactly because it involves looking at each passing test individually. I bisected the results to narrow it down to this date (+/- 1 day or so).

      A good run looks like:

      Starting changelog record: 0
      Clear changelog after use: no
      Errors: 0
      lustre_rsync took 191 seconds
      Changelog records consumed: 3501
      

            jhammond John Hammond
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: